content/infra/k8s-install/assets/kubeflow/kubeflow-pipelines/overlays/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kfp-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kfp-credentials
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Kubeflow Pipelines"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kubeflow-pipeline.k8s.demo
      secretName: kfp-api-webhook-cert
  rules:
    - host: kubeflow-pipeline.k8s.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-pipeline-ui
                port:
                  number: 80
